aggiunto tasto crea ma non funge id domani fixo

--- a/src/partials/main.scss
+++ b/src/partials/main.scss
@@ -9,3 +9,15 @@ table {
     }
   }
 }
+a#crea {
+  color: green;
+  background-color: pink;
+  border: 1px solid red;
+  font-size: 16px;
+  padding: 5px;
+  margin: 15px;
+  text-decoration: none;
+}
+main p{
+  margin: 15px;
+}
